--- a/fullPs5.html
+++ b/fullPs5.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="article">
     
-</body>
-</html>
 <h1>SONY PLAYSTATION 5</h1>
 <img src="img/ps5-img.jpg">
 <ul>
@@ -17,4 +17,12 @@
     <li>499 Euros</li>
     <li>32000 en stock</li>
 </ul>
+
 <input type="button" value="Ajouter au panier">
+</div>
+
+
+
+<script src="script.js"></script>
+</body>
+</html>
